[project]
name = "mkdocs-study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "check-mkdocs>=1.2.0",
    "mike>=2.1.3",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.19",
    "mkdocs-static-i18n>=1.3.0",
    "plantuml-markdown>=3.11.1",
    "pre-commit>=4.3.0",
    "pygments>=2.19.2",
]
